fix: res fr 2